[clean]
all = 1

#[install]
# /usr/local/lib/python2.7/site-packages doesn't work on Fedora.
# DO NOT USE the following install-lib otherwise you'll get DistributionNotFound while running entry points.
#install-lib      = /usr/lib/python2.7/site-packages
#prefix           = /usr 
#install-script   =

#-------------------------------------------------------------------------------
# See http://alexis.notmyidea.org/distutils2/setupcfg.html
#-------------------------------------------------------------------------------

[metadata]
name               = manifold
version            = 2.0.0 # See PEP386. It is deduced from manifold/__init__.py in setup.py
#platform           = # See PEP301
#supported-platform =
summary            = Manifold Interconnection Framework
description        = Manifold offers an infrastructure for easily mixing various feeds, either testbeds, or measurement frameworks, and aggregate the results in some unified/consolidated way. Manifold is behind TopHat and MySlice, but is designed to be re-usable in any similar context.
description-file   = README.rst
keywords           =
home-page          = "http://manifold.top-hat.info/"
#download-url       =
author             = Jordan Augé Marc-Olivier Buob
author-email       = <jordan.auge@lip6.fr> <marc-olivier.buob@lip6.fr>
maintainer         = Thierry Parmentelat
maintainer_email   = <thierry.parmentelat@inria.fr>
license            = GPLv3
#classifiers        = # See PEP301
requires-dist      = # See setup.py. cfgparse networkx
provides-dist      = 
obsolete-dist      =
project-url        = "http://manifold.top-hat.info/"
requires-python    = 2.7
#requires-externals =

[files]
#packages_root      = # The root directory containing all packages. If not provided Distutils2 will use the current directory. *optional
#packages           = # (set in setup.py) A list of packages the project includes *optional *multi
#modules            = # A list of packages the project includes *optional *multi

# A list of scripts the project includes *optional *multi
scripts            = 
    scripts/manifold-reset-db.sh
    scripts/manifold-populate-db.sh
#    clientbin/*

# http://alexis.notmyidea.org/distutils2/setupcfg.html#resources
resources          =
    scripts/ *.sh  = {scripts}
#    README         = {doc}
#    doc/ *         = {doc}
#    doc/ man       = {man}

# A list of patterns to include extra files *optional *multi
extra_files        =
    README
    setup.py
    setup.cfg

#-------------------------------------------------------------------------------
# The most of the values are already specified in [metadata]
#-------------------------------------------------------------------------------

[bdist_rpm]
# ---- Those values aren't exposed by setup()
# http://docs.python.org/2/distutils/builtdist.html
release          = 1
group            = "Development/Libraries"
packager         = OpenLab team
provides         = manifold
# The following is a list of rpm packages, synced with stdeb.cfg 
# Compared to stdeb.cfg, the missing dependancies are: python-networkx, python-psycopg2, sfa
requires         =
	python-BeautifulSoup
    python-daemon
	python-GeoIP
    python-lockfile
	m2crypto
	pyOpenSSL
    pyparsing
	python-setuptools
    python-sqlalchemy
    python-twisted
	
#conflicts       =
#obsoletes       =
#distribution    =
#build_requires  =
#icon            =
# --- http://docs.python.org/2/distutils/configfile.html#setup-config
#doc_files = doc/
#            samples/
#            README.txt
#            USAGE.txt
